Cleaned up project descriptions and bio

--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
                     <h2>about me</h2>
                     <h3>I'm a student web developer and programmer from Brisbane, Australia</h3>
                     <p>
-                        In 2017 I am on a journey to learn the fundamentals of web and iOS development.
-                        I am excited to see where this journey takes me, and hope that you will be
+                        In 2017 I have embarked on a journey to learn the fundamentals of web and iOS development.
+                        I'm excited to see where this journey takes me, and hope that you will be
                         along for the ride! Other than coding, I have a passion for music and pop culture.
                     </p>
                 </div>
