--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 
         <section id="about" class="container-fluid white box">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <h2>about me</h2>
                     <h3>I'm a student web developer and programmer from Brisbane, Australia</h3>
                     <p>
@@ -42,8 +42,8 @@
                         along for the ride! Other than coding, I have a passion for music and pop culture.
                     </p>
                 </div>
-                <div class="col-md-6">
-                    <img src="images/me.jpg" class="img-responsive center-block" alt="">
+                <div class="col-lg-6">
+                    <img src="images/me.jpg" class="center-block" alt="">
                 </div>
             </div>
         </section>
