--- a/index.html
+++ b/index.html
@@ -1,71 +1,166 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Matt Dobie</title>
-        <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cosmo/bootstrap.min.css" rel="stylesheet" integrity="sha384-h21C2fcDk/eFsW9sC9h0dhokq5pDinLNklTKoxIZRUn3+hvmgQSffLLQ4G4l2eEr" crossorigin="anonymous">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="css/style.min.css">
-    </head>
-    <body>
-        <nav class="navbar navbar-default">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span> 
-                    </button>
-                    <a class="navbar-brand" href="#">matt<em>dobie</em></a>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Matt Dobie</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="css/style.min.css">
+</head>
+<body>
+  <nav class="navbar navbar-inverse fixed-top navbar-toggleable-sm">
+    <div class="container">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#">matt<em>dobie</em></a>
+      <div class="collapse navbar-collapse" id="navbarMain">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="active nav-link" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#portfolio">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="bgimg-1" id="home">
+    <div class="caption">
+      <span class="border">HELLO WORLD</span>
+    </div>
+  </div>
+
+  <div class="content" id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="text-box padded">
+            <h2>about me</h2>
+            <p>I'm an aspiring web developer and programmer from Brisbane, Australia. In 2017 I am on a journey to explore the fundamentals of both front and back-end development. I'm excited to see where this journey takes me, and hope that you will be along for the ride! Along with coding my main passions are for music and pop culture.</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="padded text-center">
+            <img src="images/me.jpg" class="img-fluid center-block" alt="me" style="border-radius: 50%">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="bgimg-2" id="portfolio">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="heading">
+            <span class="border">PORTFOLIO</span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="project">
+            <a href="https://scratch.mit.edu/projects/106309939/">
+              <img src="images/falconassault640x400.jpg" class="img-fluid" alt="Falcon Assault">
+              <div class="overlay">
+                <div class="caption">
+                  <h3>Falcon Assault</h3>
+                  <p>Scratch</p>
                 </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#">home</a></li>
-                        <li><a href="about.html">about me</a></li>
-                        <li><a href="portfolio.html">portfolio</a></li>
-                        <li><a href="contact.html">contact</a></li>
-                    </ul>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="project">
+            <a href="http://github.com/matt-dobie">
+              <img src="images/trafficbugs640x400.jpg" class="img-fluid" alt="Traffic Bugs">
+              <div class="overlay">
+                <div class="caption">
+                  <h3>Traffic Bugs</h3>
+                  <p>JavaScript</p>
                 </div>
-            </div>
-        </nav>
-        
-        <section id="welcome" class="container-fluid">
-            <img src="images/background.jpg" alt="" class="img-responsive">
-            <div class="textbox">
-                <h1>hi.</h1>
-                <p>
-                    &lt;p&gt; thanks for turning up. here you can<br>
-                    take a look at what I've been up to recently &lt;/p&gt;
-                </p>
-            </div>
-        </section>
-
-        <section id="portfolio" class="container">
-             <div class="row">
-                <div class="col-sm-12">
-                    <h2>featured work</h2>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="project">
+            <a href="https://github.com/matt-dobie/udacity-pitch-perfect">
+              <img src="images/pitchperfect640x400.jpg" class="img-fluid" alt="Pitch Perfect">
+              <div class="overlay">
+                <div class="caption">
+                  <h3>Pitch Perfect</h3>
+                  <p>Swift and Xcode</p>
                 </div>
-            </div>
-                <!-- Projects go here -->
-        </section>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="project">
+            <a href="https://codepen.io/mattdobie/full/rmQoQv/">
+              <img src="images/hanszimmer640x400.jpg" class="img-fluid" alt="Tribute Page">
+              <div class="overlay">
+                <div class="caption">
+                  <h3>Tribute Page</h3>
+                  <p>Bootstrap 4 and CSS</p>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-        <footer class="footer">
-            <div class="container">
-                <p>&#169; 2017 Matthew Dobie</p>
-            </div>
-        </footer>
+  <div class="content" id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="text-box text-center">
+            <h2>find me on social media</h2>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <div class="text-center social">
+            <a href="http://twitter.com/mattdobie" class="fa fa-twitter"></a>
+            <a href="http://facebook.com/mattdobie23" class="fa fa-facebook"></a>
+            <a href="http://github.com/matt-dobie" class="fa fa-github"></a>
+            <a href="https://www.linkedin.com/in/matthew-dobie-bb9722143/" class="fa fa-linkedin"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-        <!-- Contains helpers for project builder -->
-        <script src="js/helper.js"></script>
-        <script src="js/scripts.js"></script>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div id="copyright" class="text-center">
+            <p>Copyright &copy; Matthew Dobie 2017</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-        <!--
-        Builds out the featured project section
-        dynamically when this website, index.html, is opened.
-        -->
-        <script src="js/projectBuilder.js"></script>
-        <script>projects.displayFeatured();</script>
-    </body>
+  <script src="js/scripts.js"></script>
+  
+</body>
 </html>
