--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  <nav id="navbarMain" class="navbar navbar-inverse fixed-top navbar-toggleable-sm">
+  <nav id="nav" class="navbar navbar-inverse fixed-top navbar-toggleable-sm">
     <div class="container">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#home">matt<em>dobie</em></a>
-      <div class="collapse navbar-collapse">
+      <a class="navbar-brand" data-toggle="collapse" data-target=".navbar-collapse.show" href="#home">matt<em>dobie</em></a>
+      <div id="navbarMain" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
             <a class="nav-link" href="#about">About</a>
