Fix weather app link

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                                     <li><strong>Date:</strong> June 2017</li>
                                     <li><strong>Category:</strong> Web Application</li>
                                 </ul>
-                                <a href="weather-app/weather-app.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
+                                <a href="https://codepen.io/mattdobie/full/zzoJGW/" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
                                 <a href="https://github.com/matt-dobie/weather-app" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
                                 <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</a>
                             </div>
