Add pomodoro clock project

--- a/index.html
+++ b/index.html
@@ -128,6 +128,20 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
+                        <img src="img/portfolio/pomodoroclock500x360.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Pomodoro Clock</h4>
+                        <p class="text-muted">JavaScript and jQuery</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
                         <img src="img/portfolio/calculator500x360.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
@@ -136,7 +150,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -150,7 +164,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -164,7 +178,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -175,20 +189,6 @@
                     <div class="portfolio-caption">
                         <h4>Random Quote Machine</h4>
                         <p class="text-muted">Bootstrap and JavaScript</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/hanszimmer500x360.jpg" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Hans Zimmer Tribute</h4>
-                        <p class="text-muted">Bootstrap and CSS</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -280,6 +280,40 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
+                                <h2>Pomodoro Clock</h2>
+                                <p class="item-intro text-muted">Timer application designed to improve productivity</p>
+                                <img class="img-responsive img-centered" src="img/portfolio/pomodoroclock500x360.jpg" alt="">
+                                <p>This web app was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> advanced front-end projects. The goal was to create my own version of a Pomodoro Clock which, using the <a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank">Pomodoro Technique</a>, helps the user to increase their productivity by scheduling alternating periods of work and break time. It was created with JavaScript, jQuery and CSS. This project was challenging, but I enjoyed gaining a better knowledge of JavaScript timing and overcoming its slight (but significant) inaccuracies. Check it out below!</p>
+                                <ul class="list-inline">
+                                    <li><strong>Date:</strong> July 2017</li>
+                                    <li><strong>Category:</strong> Web Application</li>
+                                </ul>
+                                <a href="pomodoro-clock/pomodoro-clock.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
+                                <a href="https://github.com/matt-dobie/pomodoro-clock" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
+                                <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 2 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
                                 <h2>JavaScript Calculator</h2>
                                 <p class="item-intro text-muted">A simple calculator application created with JavaScript</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/calculator500x360.jpg" alt="">
@@ -299,8 +333,8 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 2 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- Portfolio Modal 3 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="close-modal" data-dismiss="modal">
@@ -339,8 +373,8 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 3 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- Portfolio Modal 4 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="close-modal" data-dismiss="modal">
@@ -372,8 +406,8 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- Portfolio Modal 5 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="close-modal" data-dismiss="modal">
@@ -398,39 +432,6 @@
                                 </ul>
                                 <a href="random-quote-machine/random-quote-machine.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
                                 <a href="https://github.com/matt-dobie/random-quote-machine" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
-                                <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Portfolio Modal 5 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl">
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body">
-                                <!-- Project Details Go Here -->
-                                <h2>Hans Zimmer Tribute Page</h2>
-                                <p class="item-intro text-muted">Single page Bootstrap site dedicated the the film composer Hans Zimmer.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/hanszimmer500x360.jpg" alt="">
-                                <p>My very first project as part of the <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp</a> curriculum. The brief was to create a single-page tribute website for someone or something that interests us. I had recently seen the famous film composer Hans Zimmer in concert, and I find his music to be passionate and awe-inspiring. This page uses HTML5, Bootstrap 4 and some simple CSS to create a great looking and concise, yet informative, web page. Check it out below.</p>
-                                <ul class="list-inline">
-                                    <li><strong>Date:</strong> June 2017</li>
-                                    <li><strong>Category:</strong> Web Page</li>
-                                </ul>
-                                <a href="https://codepen.io/mattdobie/full/rmQoQv/" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
                                 <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</a>
                             </div>
                         </div>
