--- a/index.html
+++ b/index.html
@@ -128,6 +128,20 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
+                        <img src="img/portfolio/tic-tac-toe500x360.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Tic-Tac-Toe</h4>
+                        <p class="text-muted">JavaScript and jQuery</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
                         <img src="img/portfolio/pomodoroclock500x360.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
@@ -136,7 +150,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -150,7 +164,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -164,7 +178,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -178,20 +192,6 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/randomquote500x360.jpg" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Random Quote Machine</h4>
-                        <p class="text-muted">Bootstrap and JavaScript</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -201,8 +201,8 @@
                         <img src="img/portfolio/portfolio500x360.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Portfolio Site</h4>
-                        <p class="text-muted">Bootstrap and CSS</p>
+                        <h4>More Projects</h4>
+                        <p class="text-muted">Check Out Older Projects Here</p>
                     </div>
                 </div>
             </div>
@@ -280,6 +280,40 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
+                                <h2>Tic-Tac-Toe</h2>
+                                <p class="item-intro text-muted">Playable game of Tic-Tac-Toe built in JavaScript</p>
+                                <img class="img-responsive img-centered" src="img/portfolio/tic-tac-toe500x360.jpg" alt="">
+                                <p>This game was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> advanced front-end projects. The goal was to create my own playable version of Tic-Tac-Toe. It includes a multiplayer mode for the user to play against a friend, as well as a single-player mode with four different levels of difficulty. To achieve this I had to build an AI system in JavaScript based on the <a href="https://en.wikipedia.org/wiki/Minimax" target="_blank">Minimax Algorithm</a> - one that allows the computer to actually decide what is the best move to make during its turn. This was by far the most challenging and exciting aspect of the project. Check it out below, and let me know if you manage to beat the 'Master' difficulty level in single-player (Hint: It should be impossible)!</p>
+                                <ul class="list-inline">
+                                    <li><strong>Date:</strong> July 2017</li>
+                                    <li><strong>Category:</strong> Game</li>
+                                </ul>
+                                <a href="tic-tac-toe/tic-tac-toe.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
+                                <a href="https://github.com/matt-dobie/tic-tac-toe" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
+                                <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 2 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
                                 <h2>Pomodoro Clock</h2>
                                 <p class="item-intro text-muted">Timer application designed to improve productivity</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/pomodoroclock500x360.jpg" alt="">
@@ -299,8 +333,8 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 2 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- Portfolio Modal 3 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="close-modal" data-dismiss="modal">
@@ -333,8 +367,8 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 3 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- Portfolio Modal 4 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="close-modal" data-dismiss="modal">
@@ -373,8 +407,8 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- Portfolio Modal 5 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="close-modal" data-dismiss="modal">
@@ -406,41 +440,6 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 5 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl">
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body">
-                                <!-- Project Details Go Here -->
-                                <h2>Random Quote Machine</h2>
-                                <p class="item-intro text-muted">Generate random quotes using the Random Famous Quotes API.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/randomquote500x360.jpg" alt="">
-                                <p>This web app was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> intermediate projects. The aim is simply to allow the user to randomly generate famous quotes, both from real people and characters in movies. The clean minimalist layout was created using Bootstrap 4, and the quotes themselves were generated using the <a href="" target="_blank">Random Famous Quotes API</a> and JavaScript.</p>
-                                <p>Check it out below!</p>
-                                <ul class="list-inline">
-                                    <li><strong>Date:</strong> June 2017</li>
-                                    <li><strong>Category:</strong> Web Application</li>
-                                </ul>
-                                <a href="random-quote-machine/random-quote-machine.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
-                                <a href="https://github.com/matt-dobie/random-quote-machine" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
-                                <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Portfolio Modal 6 -->
     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
@@ -456,16 +455,26 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Portfolio Site</h2>
-                                <p class="item-intro text-muted">This very website, designed to showcase my current and future web projects.</p>
+                                <h2>More Projects</h2>
+                                <p class="item-intro text-muted">Take a look at some of my older projects</p>
+                                <hr>
                                 <img class="img-responsive img-centered" src="img/portfolio/portfolio500x360.jpg" alt="">
-                                <p>As a student of web development looking to start a career in the field, it's vital to have my own space on the web to display any relevant projects that I've worked on. This is the third version of that site, and was developed with HTML5, CSS3, Bootstrap 3, JavaScript and jQuery.</p>
-                                <ul class="list-inline">
-                                    <li><strong>Date:</strong> Feb 2017 - present</li>
-                                    <li><strong>Category:</strong> Web Design</li>
-                                </ul>
+                                <div class="portfolio-caption">
+                                    <h4>Portfolio Site</h4>
+                                    <p class="text-muted">HTML5, CSS3, Bootstrap and jQuery</p>
+                                </div>
+                                <a href="" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
                                 <a href="https://github.com/matt-dobie/matt-dobie.github.io" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
-                                <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</a>
+                                <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close List</a>
+                                <hr>
+                                <img class="img-responsive img-centered" src="img/portfolio/randomquote500x360.jpg" alt="">
+                                <div class="portfolio-caption">
+                                    <h4>Random Quote Machine</h4>
+                                    <p class="text-muted">JavaScript and jQuery</p>
+                                </div>
+                                <a href="random-quote-machine/random-quote-machine.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
+                                <a href="https://github.com/matt-dobie/random-quote-machine" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
+                                <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close List</a>
                             </div>
                         </div>
                     </div>
@@ -473,7 +482,6 @@
             </div>
         </div>
     </div>
-
     
 
     <!-- jQuery -->
