Add Simon project

--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/tic-tac-toe500x360.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/simon500x360.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Tic-Tac-Toe</h4>
-                        <p class="text-muted">JavaScript and jQuery</p>
+                        <h4>Simon Game</h4>
+                        <p class="text-muted">CSS3 and JavaScript</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -142,10 +142,10 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/pomodoroclock500x360.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/tic-tac-toe500x360.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Pomodoro Clock</h4>
+                        <h4>Tic-Tac-Toe</h4>
                         <p class="text-muted">JavaScript and jQuery</p>
                     </div>
                 </div>
@@ -280,16 +280,17 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Tic-Tac-Toe</h2>
-                                <p class="item-intro text-muted">Playable game of Tic-Tac-Toe built in JavaScript</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/tic-tac-toe500x360.jpg" alt="">
-                                <p>This game was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> advanced front-end projects. The goal was to create my own playable version of Tic-Tac-Toe. It includes a multiplayer mode for the user to play against a friend, as well as a single-player mode with four different levels of difficulty. To achieve this I had to build an AI system in JavaScript based on the <a href="https://en.wikipedia.org/wiki/Minimax" target="_blank">Minimax Algorithm</a> - one that allows the computer to actually decide what is the best move to make during its turn. This was by far the most challenging and exciting aspect of the project. Check it out below, and let me know if you manage to beat the 'Master' difficulty level in single-player (Hint: It should be impossible)!</p>
+                                <h2>Simon Game</h2>
+                                <p class="item-intro text-muted">Memory game built in JavaScript</p>
+                                <img class="img-responsive img-centered" src="img/portfolio/simon500x360.jpg" alt="">
+                                <p>This game was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> advanced front-end projects. The goal was to create my own version of <a href="https://en.wikipedia.org/wiki/Simon_(game)" target="_blank">Simon</a>, a memory-based game where the user has to watch a set of four buttons light up in a specific sequence. After the user successfully replicates the sequence via button presses, a new light is added to the sequence and another round begins. Each time the pattern is longer and thus the difficulty increases, with the ultimate goal being to remember a sequence of 20 lights!</p>
+                                <p>For this project there were two main challenges: the CSS and the JavaScript game logic. Working out how to construct the centred circular shapes and curved buttons via CSS was particularly challenging, but I am quite happy with the result. Check it out below!</p>
                                 <ul class="list-inline">
-                                    <li><strong>Date:</strong> July 2017</li>
+                                    <li><strong>Date:</strong> August 2017</li>
                                     <li><strong>Category:</strong> Game</li>
                                 </ul>
-                                <a href="tic-tac-toe/tic-tac-toe.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
-                                <a href="https://github.com/matt-dobie/tic-tac-toe" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
+                                <a href="simon-game/simon-game.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
+                                <a href="https://github.com/matt-dobie/simon-game" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
                                 <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</a>
                             </div>
                         </div>
@@ -314,16 +315,16 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Pomodoro Clock</h2>
-                                <p class="item-intro text-muted">Timer application designed to improve productivity</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/pomodoroclock500x360.jpg" alt="">
-                                <p>This web app was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> advanced front-end projects. The goal was to create my own version of a Pomodoro Clock which, using the <a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank">Pomodoro Technique</a>, helps the user to increase their productivity by scheduling alternating periods of work and break time. It was created with JavaScript, jQuery and CSS. This project was challenging, but I enjoyed gaining a better knowledge of JavaScript timing and overcoming its slight (but significant) inaccuracies. Check it out below!</p>
+                                <h2>Tic-Tac-Toe</h2>
+                                <p class="item-intro text-muted">Playable game of Tic-Tac-Toe built in JavaScript</p>
+                                <img class="img-responsive img-centered" src="img/portfolio/tic-tac-toe500x360.jpg" alt="">
+                                <p>This game was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> advanced front-end projects. The goal was to create my own playable version of Tic-Tac-Toe. It includes a multiplayer mode for the user to play against a friend, as well as a single-player mode with four different levels of difficulty. To achieve this I had to build an AI system in JavaScript based on the <a href="https://en.wikipedia.org/wiki/Minimax" target="_blank">Minimax Algorithm</a> - one that allows the computer to actually decide what is the best move to make during its turn. This was by far the most challenging and exciting aspect of the project. Check it out below, and let me know if you manage to beat the 'Master' difficulty level in single-player (Hint: It should be impossible)!</p>
                                 <ul class="list-inline">
                                     <li><strong>Date:</strong> July 2017</li>
-                                    <li><strong>Category:</strong> Web Application</li>
+                                    <li><strong>Category:</strong> Game</li>
                                 </ul>
-                                <a href="pomodoro-clock/pomodoro-clock.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
-                                <a href="https://github.com/matt-dobie/pomodoro-clock" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
+                                <a href="tic-tac-toe/tic-tac-toe.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
+                                <a href="https://github.com/matt-dobie/tic-tac-toe" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
                                 <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</a>
                             </div>
                         </div>
@@ -465,6 +466,15 @@
                                 </div>
                                 <a href="" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
                                 <a href="https://github.com/matt-dobie/matt-dobie.github.io" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
+                                <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close List</a>
+                                <hr>
+                                <img class="img-responsive img-centered" src="img/portfolio/pomodoroclock500x360.jpg" alt="">
+                                <div class="portfolio-caption">
+                                    <h4>Pomodoro Clock</h4>
+                                    <p class="text-muted">JavaScript and jQuery</p>
+                                </div>
+                                <a href="pomodoro-clock/pomodoro-clock.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
+                                <a href="https://github.com/matt-dobie/pomodoro-clock" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
                                 <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close List</a>
                                 <hr>
                                 <img class="img-responsive img-centered" src="img/portfolio/randomquote500x360.jpg" alt="">
